--- a/data/objects/props-interactive/obstacles/retracting_block_sequence.cfg
+++ b/data/objects/props-interactive/obstacles/retracting_block_sequence.cfg
@@ -64,8 +64,8 @@ object_type: {
 	platform_area: [0,15,15,16],
 	on_first_cycle: "if(animation != 'extended', set(platform_area, []))",
 	on_enter_retracted_anim: "set(platform_area, [])",
-	on_enter_extending_anim: "[set(platform_area, null),sound('platform-retracting-stone-slide-out'+1d4+'.wav')]",
-	on_enter_retracting_anim: "sound('platform-retracting-stone-slide-in'+1d4+'.wav')",
+	on_enter_extending_anim: "[set(platform_area, null),play_sound__falloff('platform-retracting-stone-slide-out')]",
+	on_enter_retracting_anim: "play_sound__falloff('platform-retracting-stone-slide-in')",
 	on_end_retracting_anim: "animation('retracted')",
 	on_end_extending_anim: "animation('extended')",
 	animation: [
