--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -15,9 +15,9 @@ on_wingflap: "sound_falloff('moth-boss-wing-flap'+1d5+'.wav',500,1.0)",
 properties: {
 	custom_damage_table: "{
 		enum neutral: 1.0,
-		enum fire: 1.0,
-		enum energy: 1.0,
-		enum arcane: 1.0,
+		enum fire: 0.05,
+		enum energy: 0.05,
+		enum arcane: 0.0,
 		enum acid: 1.0,
 		enum impact: 1.0,
 		enum impale: 1.0,
@@ -312,7 +312,7 @@ properties: {
 #---- lay egg ----#
 	should_lay_egg: "can_lay_egg_at_current_pos and (size(filter(level.chars, value.type in ['moth_boss.egg','moth_small'])) <= 1)",
 	lay_egg: "[	
-		play_sound__falloff('moth-boss-lay-egg), schedule(timeout/2, 
+		play_sound__falloff('moth-boss-lay-egg'), schedule(timeout/2, 
 			[spawn_egg(50 - 1d50)],
 		),
 		schedule_next_action
