Fixed a dumb, embarrassing typo on berd's neutral conversation after the moth boss.  Adjusted the moth boss to have slightly less HP, gave it slightly more energy vulnerability, and eliminated the fire vulnerability entirely.  Added another card draw for it dropping ammo so that the fight can progress more quickly.

--- a/data/level/Forest/ravenish-ravine.cfg
+++ b/data/level/Forest/ravenish-ravine.cfg
@@ -96,7 +96,7 @@
 
 			"on_talk": "speech_dialog(
 							set(level.player.animation, 'emote_confused'),
-				Frogatto,	[~So in all seriousness, what we we doing now?\\nWhere am I going again?~],
+				Frogatto,	[~So in all seriousness, what're we we doing now?\\nWhere am I going again?~],
 							set(Berd.animation, 'emote_wry'), 
 				Berd,		[~Well, I do say, if you look to our east…\\nyou'll notice something quite curious.~],
 							set(Berd.animation, 'emote_talk'),
