--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -15,8 +15,8 @@ on_wingflap: "sound_falloff('moth-boss-wing-flap'+1d5+'.wav',500,1.0)",
 properties: {
 	custom_damage_table: "{
 		enum neutral: 1.0,
-		enum fire: 0.05,
-		enum energy: 0.05,
+		enum fire: 0.0,
+		enum energy: 0.1,
 		enum arcane: 0.0,
 		enum acid: 1.0,
 		enum impact: 1.0,
@@ -51,7 +51,7 @@ properties: {
 	
 	#-------------------------- general functions --------------------------#
 	setup: "[
-		set_max_hitpoints({casual: standard_thrown_damage * 8, challenging: standard_thrown_damage * 16}),
+		set_max_hitpoints({casual: standard_thrown_damage * 7, challenging: standard_thrown_damage * 11}),
 		setup_wind_gust_obj,
 		add_object(dash_particles)
 		;
@@ -80,13 +80,15 @@ properties: {
 										1,	enter_mode('shooting_homingshot',prepare_homing_shot),
 										2,	enter_mode('moving_to_prep_windgust',choose_windgust_target_pos),
 										3,	enter_mode('dive_attack_dropdown', choose_dive_dropdown_pos ),
-										4,	if(should_lay_egg,
-												enter_mode('egg-laying',lay_egg),
-												enter_mode('shooting',prepare_shot)
-											),
+										4,	try_laying_egg,
+										5,	try_laying_egg,
 										),
 									_behavior_mode_prng.iterate_random_pool
-								]
+								] where try_laying_egg = 
+									if(should_lay_egg,
+										enter_mode('egg-laying',lay_egg),
+										enter_mode('shooting',prepare_shot)
+									),
 							)
 						)
 					)
@@ -447,7 +449,7 @@ properties: {
 	_state: { type: "string", default: 'moving', persistent: false },
 	behavior: "_state",
 	
-	_behavior_mode_prng:	{ type: "class pseudo_random_numbers", init: "construct('pseudo_random_numbers',{_size_of_pool:5, _pool_size_multiplier: 1})", persistent: false },
+	_behavior_mode_prng:	{ type: "class pseudo_random_numbers", init: "construct('pseudo_random_numbers',{_size_of_pool:6, _pool_size_multiplier: 1})", persistent: false },
 	_flight_height_prng:	{ type: "class pseudo_random_numbers", init: "construct('pseudo_random_numbers',{_size_of_pool:2, _pool_size_multiplier: 2})", persistent: false },
 
 	flight_bounds: { type: "{ x: int, y: int, x2: int, y2: int }", dynamic_initialization: true },
