Some tuning for the jumping worm's vulnerability to impact damage, so the crates in their boss fight aren't useless.

--- a/data/objects/enemies/bugs/worm_jumping.cfg
+++ b/data/objects/enemies/bugs/worm_jumping.cfg
@@ -31,7 +31,7 @@ properties: {
 	points_value: "14",
 	basic_type: "me.type",
 	frogourmet_tag: "me.basic_type",
-	taxonomy: "TaxonomyType :: enum mammal",
+	taxonomy: "TaxonomyType :: enum bug",
 	death_fx_type: "'milgramen'",
 	acquirable_item_drop_value: "16",	
 	
@@ -49,9 +49,16 @@ properties: {
 		
 	/*
 		Special immunity to impale damage;  these guys almost always spawn in spikes, and need to not die to them.
+		Also a special weakness to impact damage, particularly due to a special fight where there are crates available to attack them with.
 	*/
 	handle_custom_damage_type_modifications: "def(DamageType damage_type, int amount) -> int|null
-		if(damage_type = enum impale or damage_type = enum lacerate, 0, null)
+		if(damage_type = enum impale or damage_type = enum lacerate,
+			0,
+			if(damage_type = enum impact,
+				amount * 4,  //functionally means 2 shots to kill
+			 	null
+			 )
+		)
 	",		
 		
 #-------------------------- core behavior settings --------------------------#
